--- a/inventory_reporting/wizard/wizard_component_report.xml
+++ b/inventory_reporting/wizard/wizard_component_report.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_wizard_inv_activity_component_report_form"
+    <!-- PDF Report Wizard Form -->
+    <record id="view_wizard_inv_activity_component_pdf_report_form"
             model="ir.ui.view">
-        <field name="name">wizard.activity.component.form</field>
+        <field name="name">wizard.activity.component.pdf.form</field>
         <field name="model">wizard.activity.component</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="INV Component Report">
+            <form string="INV Component PDF Report">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
@@ -25,7 +26,51 @@
                     <button string='Print PDF'
                             name="print_inv_pdf_report_component"
                             type="object" class="btn-primary"/>
-                    <button string='Print Excel' name="print_excel_report"
+                    <button string="Cancel" class="btn-secondary"
+                            special="cancel"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+
+    <!-- PDF Report Wizard Action -->
+    <record model="ir.actions.act_window"
+            id="action_wizard_inv_component_pdf_view">
+        <field name="name">Activity Component PDF Report</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">wizard.activity.component</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">form</field>
+        <field name="view_id"
+               ref="view_wizard_inv_activity_component_pdf_report_form"/>
+        <field name="context">{'report_context': 'activity_component'}</field>
+        <field name="target">new</field>
+    </record>
+
+    <!-- Excel Report Wizard Form -->
+    <record id="view_wizard_inv_activity_component_excel_report_form"
+            model="ir.ui.view">
+        <field name="name">wizard.activity.component.excel.form</field>
+        <field name="model">wizard.activity.component</field>
+        <field name="type">form</field>
+        <field name="priority" eval="8"/>
+        <field name="arch" type="xml">
+            <form string="INV Component Excel Report">
+                <group>
+                    <group>
+                        <field name="date_start" required="1"/>
+                        <field name="product_id" context="{'default_code':1}"
+                               options="{'no_create_edit': True}"/>
+                    </group>
+                    <group>
+                        <field name="date_end"/>
+                        <field name="item_categ"
+                               options="{'no_create_edit': True}"/>
+                    </group>
+                </group>
+
+                <footer>
+                    <button string='Export to Excel' name="print_excel_report"
                             type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary"
                             special="cancel"/>
@@ -33,21 +78,28 @@
             </form>
         </field>
     </record>
+
+    <!-- Excel Report Wizard Action -->
     <record model="ir.actions.act_window"
-            id="action_wizard_inv_component_view">
-        <field name="name">Activity Component Report</field>
+            id="action_wizard_inv_component_excel_view">
+        <field name="name">Activity Component Excel Report</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">wizard.activity.component</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
         <field name="view_id"
-               ref="view_wizard_inv_activity_component_report_form"/>
+               ref="view_wizard_inv_activity_component_excel_report_form"/>
         <field name="context">{'report_context': 'activity_component'}</field>
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_inv_act_comp_report"
-              name="Inv Activity Component Report"
-              action="action_wizard_inv_component_view"
-              parent="menu_inv_report" sequence="2"/>
+    <menuitem id="menu_inv_act_comp_pdf_report"
+              name="Inv Activity Component PDF Report"
+              action="action_wizard_inv_component_pdf_view"
+              parent="menu_inv_report" sequence="3"/>
+
+    <menuitem id="menu_inv_act_comp_excel_report"
+              name="Inv Activity Component Excel Report"
+              action="action_wizard_inv_component_excel_view"
+              parent="menu_inv_report" sequence="4"/>
 </odoo>
