--- a/inventory_reporting/wizard/wizard_inv_lot_activity_report.xml
+++ b/inventory_reporting/wizard/wizard_inv_lot_activity_report.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <!-- PDF Report Wizard Form -->
-    <record id="view_wizard_inv_activity_fg_pdf_report_form" model="ir.ui.view">
-        <field name="name">wizard.activity.finish.goods.pdf.form</field>
-        <field name="model">wizard.activity.finish.goods</field>
+    <record id="view_wizard_inv_lot_activity_pdf_report_form" model="ir.ui.view">
+        <field name="name">wizard.inv.lot.activity.pdf.form</field>
+        <field name="model">wizard.stock.by.lot.activity</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="INV FG PDF Report">
+            <form string="Inv Lot Activity Pdf Report">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
                         <field name="product_id" context="{'default_code':1}"
                                options="{'no_create_edit': True}"/>
+                        <field name="lot_id" options="{'no_create_edit': True}"/>
                     </group>
                     <group>
                         <field name="date_end"/>
@@ -22,7 +23,7 @@
                 </group>
 
                 <footer>
-                    <button string='Print PDF' name="print_inv_pdf_report"
+                    <button string='Print PDF' name="print_by_lot_activity_pdf_report"
                             type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary"
                             special="cancel"/>
@@ -33,30 +34,31 @@
 
     <!-- PDF Report Wizard Action -->
     <record model="ir.actions.act_window"
-            id="action_wizard_inv_finish_goods_pdf_view">
-        <field name="name">Activity FG PDF Report</field>
+            id="action_wizard_inv_lot_activity_pdf_report_view">
+        <field name="name">Lot Activity Pdf Report</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wizard.activity.finish.goods</field>
+        <field name="res_model">wizard.stock.by.lot.activity</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_inv_activity_fg_pdf_report_form"/>
-        <field name="context">{'report_context': 'finish_goods'}</field>
+        <field name="view_id" ref="view_wizard_inv_lot_activity_pdf_report_form"/>
+        <field name="context">{'report_context': 'by_lot_activity'}</field>
         <field name="target">new</field>
     </record>
 
-    <!-- Excel Report Wizard Form -->
-    <record id="view_wizard_inv_activity_fg_excel_report_form" model="ir.ui.view">
-        <field name="name">wizard.activity.finish.goods.excel.form</field>
-        <field name="model">wizard.activity.finish.goods</field>
+    <!-- &lt;!&ndash; Excel Report Wizard Form &ndash;&gt; -->
+    <record id="view_wizard_inv_lot_activity_excel_report_form" model="ir.ui.view">
+        <field name="name">wizard.inv.lot.activity.excel.form</field>
+        <field name="model">wizard.stock.by.lot.activity</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="INV FG Excel Report">
+            <form string="Inv Lot Activity Excel Report">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
                         <field name="product_id" context="{'default_code':1}"
                                options="{'no_create_edit': True}"/>
+                        <field name="lot_id" options="{'no_create_edit': True}"/>
                     </group>
                     <group>
                         <field name="date_end"/>
@@ -66,7 +68,7 @@
                 </group>
 
                 <footer>
-                    <button string='Export to Excel' name="print_excel_report"
+                    <button string='Export to Excel' name="print_excel_lot_activity_excel_report"
                             type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary"
                             special="cancel"/>
@@ -75,30 +77,26 @@
         </field>
     </record>
 
-    <!-- Excel Report Wizard Action -->
+   <!--  &lt;!&ndash; Excel Report Wizard Action &ndash;&gt; -->
     <record model="ir.actions.act_window"
-            id="action_wizard_inv_finish_goods_excel_view">
-        <field name="name">Activity FG Excel Report</field>
+            id="action_wizard_inv_lot_activity_excel_view">
+        <field name="name">Lot Activity Excel Report</field>
         <field name="type">ir.actions.act_window</field>
-        <field name="res_model">wizard.activity.finish.goods</field>
+        <field name="res_model">wizard.stock.by.lot.activity</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_inv_activity_fg_excel_report_form"/>
-        <field name="context">{'report_context': 'finish_goods'}</field>
+        <field name="view_id" ref="view_wizard_inv_lot_activity_excel_report_form"/>
+        <field name="context">{'report_context': 'by_lot_activity'}</field>
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_inv_report" name="Inventory Reporting"
-              parent="stock.menu_warehouse_report"
-              sequence="5"/>
+    <menuitem id="menu_inv_lot_activity_pdf_report"
+              name="Inv Lot Activity PDF Report"
+              action="action_wizard_inv_lot_activity_pdf_report_view"
+              parent="menu_inv_report" sequence="7"/>
 
-    <menuitem id="menu_inv_finish_good_pdf_report"
-              name="Inv Finish Good PDF Report"
-              action="action_wizard_inv_finish_goods_pdf_view"
-              parent="menu_inv_report" sequence="1"/>
-
-    <menuitem id="menu_inv_finish_good_excel_report"
-              name="Inv Finish Good Excel Report"
-              action="action_wizard_inv_finish_goods_excel_view"
-              parent="menu_inv_report" sequence="2"/>
+    <menuitem id="menu_inv_lot_activity_excel_report"
+            name="Inv Lot Activity Excel Report"
+            action="action_wizard_inv_lot_activity_excel_view"
+            parent="menu_inv_report" sequence="8"/>
 </odoo>
