--- a/inventory_reporting/wizard/wizard_so_summary_report.xml
+++ b/inventory_reporting/wizard/wizard_so_summary_report.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-    <record id="view_wizard_so_summary_form" model="ir.ui.view">
-        <field name="name">wizard.so.summary.form</field>
+    <record id="view_wizard_so_summary_pdf_form" model="ir.ui.view">
+        <field name="name">wizard.so.summary.pdf.form</field>
         <field name="model">wizard.so.summary</field>
         <field name="type">form</field>
         <field name="priority" eval="8"/>
         <field name="arch" type="xml">
-            <form string="SO Summary">
+            <form string="SO Summary PDF">
                 <group>
                     <group>
                         <field name="date_start" required="1"/>
@@ -18,7 +18,40 @@
                 <footer>
                     <button string='Print PDF' name="print_summary_pdf_report"
                             type="object" class="btn-primary"/>
-                    <button string='Print Excel' name="print_summary_excel_report"
+                    <button string="Cancel" class="btn-secondary"
+                            special="cancel"/>
+                </footer>
+            </form>
+        </field>
+    </record>
+    <record model="ir.actions.act_window"
+            id="action_wizard_so_summary_pdf_view">
+        <field name="name">SO Summary PDF Report</field>
+        <field name="type">ir.actions.act_window</field>
+        <field name="res_model">wizard.so.summary</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">form</field>
+        <field name="view_id" ref="view_wizard_so_summary_pdf_form"/>
+        <field name="target">new</field>
+    </record>
+
+    <record id="view_wizard_so_summary_excel_form" model="ir.ui.view">
+        <field name="name">wizard.so.summary.excel.form</field>
+        <field name="model">wizard.so.summary</field>
+        <field name="type">form</field>
+        <field name="priority" eval="8"/>
+        <field name="arch" type="xml">
+            <form string="SO Summary Excel">
+                <group>
+                    <group>
+                        <field name="date_start" required="1"/>
+                    </group>
+                    <group>
+                        <field name="date_end"/>
+                    </group>
+                </group>
+                <footer>
+                    <button string='Export to Excel' name="print_summary_excel_report"
                             type="object" class="btn-primary"/>
                     <button string="Cancel" class="btn-secondary"
                             special="cancel"/>
@@ -27,19 +60,24 @@
         </field>
     </record>
     <record model="ir.actions.act_window"
-            id="action_wizard_so_summary_view">
+            id="action_wizard_so_summary_excel_view">
         <field name="name">SO Summary Report</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">wizard.so.summary</field>
         <field name="view_type">form</field>
         <field name="view_mode">form</field>
-        <field name="view_id" ref="view_wizard_so_summary_form"/>
+        <field name="view_id" ref="view_wizard_so_summary_excel_form"/>
         <field name="target">new</field>
     </record>
 
-    <menuitem id="menu_so_summary_report"
-              name="SO Summary Report"
-              action="action_wizard_so_summary_view"
-              parent="menu_inv_report" sequence="7"/>
+    <menuitem id="menu_so_summary_pdf_report"
+              name="SO Summary PDF Report"
+              action="action_wizard_so_summary_pdf_view"
+              parent="sale.menu_sale_report" sequence="6"/>
+
+    <menuitem id="menu_so_summary_excel_report"
+              name="SO Summary Excel Report"
+              action="action_wizard_so_summary_excel_view"
+              parent="sale.menu_sale_report" sequence="7"/>
 
 </odoo>
